--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -11,4 +11,4 @@ jobs:
         uses: docker://orrosenblatt/validate-json-action:latest
         env:
           INPUT_SCHEMA: ./schema.json
-          INPUT_JSONS: ./variant-matching.jsonld,./anno.jsonld,./error.json
+          INPUT_JSONS: ./variant-matching.jsonld,./anno.jsonld
