--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -10,5 +10,5 @@ jobs:
       - name: Validate JSON
         uses: docker://orrosenblatt/validate-json-action:latest
         env:
-          INPUT_SCHEMA: ./schema.json
+          INPUT_SCHEMA: .github/schemas/schema.json
           INPUT_JSONS: ./variant-matching.jsonld,./anno.jsonld
